[package]
name = "ligerito"
version = "0.1.1"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Ligerito polynomial commitment scheme over binary extension fields"
keywords = ["cryptography", "commitment", "zero-knowledge", "binary-fields"]
categories = ["cryptography", "no-std"]
exclude = [
    "browser-shell.nix",
    "deploy/",
    "pkg/",
    "BENCHMARK_RESULTS.md",
    ".gitignore",
]

[lib]
crate-type = ["cdylib", "rlib"]

# Default is full-featured std environment with prover + verifier + CLI
# Uses SHA256 transcript by default (no extra deps, works everywhere)
[features]
default = ["std", "prover", "parallel", "hardware-accel", "cli"]

# Environment: std or no_std
std = [
    "ligerito-binary-fields/std",
    "ligerito-merkle/std",
    "serde/std",
    "thiserror",
]

# Functionality: include prover or verifier-only
prover = ["ligerito-reed-solomon", "rand", "rand_chacha"]
verifier-only = []

# Performance optimizations
parallel = ["rayon"]
hardware-accel = ["ligerito-binary-fields/hardware-accel"]

# Transcript implementations
# SHA256 is always available (default) - no extra dependencies, works in no_std
transcript-sha256 = []  # Default: minimal deps, works everywhere including WASM
transcript-merlin = ["merlin", "std"]  # Merlin transcript (Zcash/Dalek standard)

# WASM support
wasm = [
    "std",                          # Need std for WASM
    "prover",                       # Include prover in WASM
    "parallel",                     # Include parallel (rayon will fall back to single-threaded in WASM)
    "transcript-sha256",            # Use SHA256 (works in WASM)
    "getrandom/js",                 # Enable WASM-compatible RNG
    "wasm-bindgen",                 # WASM bindings
    "wasm-bindgen-futures",         # Async WASM support
    "console_error_panic_hook",     # Better error messages in browser console
    "bincode",                      # For serialization
    "js-sys",                       # JavaScript types
]

# Multi-threaded WASM (requires SharedArrayBuffer + CORS headers)
wasm-parallel = [
    "wasm",
    "wasm-bindgen-rayon",       # Enable rayon in WASM via Web Workers
    "js-sys",                   # JavaScript Promise types
]

# WebGPU acceleration (optional, falls back to WASM if unavailable)
webgpu = [
    "wasm",
    "wgpu",                     # WebGPU API
    "pollster",                 # Async executor for WASM
    "web-sys",                  # For console logging in WASM
    "futures",                  # Async utilities
]

# PolkaVM integration - not available in published crate
# Use polkavm-pcvm crate separately for PolkaVM integration
# polkavm-integration = [
#     "std",
#     "prover",
#     "polkavm",
#     "polkavm-common",
# ]

# CLI binary support - includes ALL features for maximum capability
# Why hold back? Users want the full power!
cli = [
    "std",
    "prover",
    "parallel",
    "hardware-accel",
    "transcript-sha256",
    "transcript-merlin",
    "bincode",
    "clap",
    "anyhow",
    "hex",
    "serde_json",
    # Note: webgpu is NOT included by default (requires GPU drivers)
    # Users can build with: cargo build --bin ligerito --features "cli,webgpu"
]

[dependencies]
# Core dependencies (always needed)
ligerito-binary-fields = { version = "0.1.0", path = "../ligerito-binary-fields", default-features = false, features = ["serde"] }
ligerito-merkle = { version = "0.1.0", path = "../ligerito-merkle", default-features = false, features = ["serde"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
bytemuck = { workspace = true }

# Crypto (sha256 always available for no_std)
sha2 = { workspace = true, default-features = false }
merlin = { workspace = true, optional = true }

# Prover-only dependencies
ligerito-reed-solomon = { version = "0.1.0", path = "../ligerito-reed-solomon", optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

# PolkaVM integration (optional)
# Not included in published crate - use polkavm-pcvm crate separately
# polkavm = { version = "0.9", optional = true }
# polkavm-common = { version = "0.9", optional = true }

# Parallel processing (std only)
rayon = { workspace = true, optional = true }

# Error handling (std only - for no_std we use custom errors)
thiserror = { workspace = true, optional = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
hex = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }
js-sys = { version = "0.3.82", optional = true }

# WebGPU dependencies
wgpu = { version = "0.20", optional = true, features = ["webgpu", "wgsl"] }
pollster = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
futures = { version = "0.3", optional = true }

# For no_std targets, we need alloc
[dependencies.hashbrown]
version = "0.14"
default-features = false
optional = true
features = ["serde"]

[dev-dependencies]
criterion = { workspace = true }
bincode = { version = "1.3" }
rand = { workspace = true }

# CLI binary
[[bin]]
name = "ligerito"
path = "src/bin/ligerito.rs"
required-features = ["cli"]

# Examples that are local to this crate
[[example]]
name = "compression_prototype"
path = "examples/compression_prototype.rs"

[[example]]
name = "detailed_proof_breakdown"
path = "examples/detailed_proof_breakdown.rs"

# Benchmarks
[[bench]]
name = "ligerito_bench"
harness = false
