[package]
name = "poker-client"
version = "0.1.0"
edition = "2021"
description = "professional multi-table poker client"
authors = ["rotko <hq@rotko.net>"]
license = "MIT"
repository = "https://github.com/nickkuk/zeratul"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "x11",
    "wayland",
    "tonemapping_luts",
] }
bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
egui = "0.28"

# crypto
blake3 = "1.5"
hex = "0.4"

# mental poker
zk-shuffle = { path = "../zk-shuffle" }
curve25519-dalek = { version = "4.1", features = ["rand_core"] }

# encoding
parity-scale-codec = { version = "3.6", features = ["derive"] }

# async runtime (for chain client)
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# p2p networking
poker-p2p = { path = "../poker-p2p" }

# http client for vault
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# random
rand = "0.8"

# error handling
thiserror = "1"

# ghettobox identity (email + PIN login)
ghettobox = { path = "../ghettobox", features = ["network"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hkdf = "0.12"

# storage encryption
chacha20poly1305 = "0.10"
getrandom = "0.2"
bincode = "1.3"
parking_lot = "0.12"

# shielded state storage (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nomt = { path = "../../../nomt/nomt" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    # webgpu for modern browsers (chrome 113+, firefox 121+)
    "webgpu",
    # webgl2 fallback for older browsers
    "webgl2",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Storage", "Performance"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
uuid = { version = "1.19", features = ["js"] }
