[package]
name = "poker-escrow"
version = "0.1.0"
edition = "2021"
description = "Poker escrow service — FROST 2-of-3 key management, deposit tracking, payout signing"

[dependencies]
# FROST / crypto
osst = { path = "../osst", features = ["pallas"] }
pasta_curves = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# web server
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# zidecar gRPC client (deposit watching)
# tonic = "0.12"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
