[package]
name = "poker-escrow"
version = "0.1.0"
edition = "2021"
description = "Poker escrow service — FROST 2-of-3 key management, deposit tracking, payout signing"

[dependencies]
# FROST / crypto
osst = { path = "../osst", features = ["pallas"] }
pasta_curves = "0.5"
ff = "0.13"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# FROST + Orchard UA derivation (shared with zcli, zafu, zigner)
frost-spend = { git = "https://github.com/rotkonetworks/zcli", branch = "staging" }
zcash_address = "0.6"

# zidecar gRPC client + Orchard compact-block scanner (mirrors zcli/bin/license-server)
zecli = { git = "https://github.com/rotkonetworks/zcli", branch = "staging" }
orchard = { version = "0.12", default-features = false, features = ["circuit", "unstable-frost"] }
zcash_note_encryption = "0.4"
zcash_protocol = { version = "0.7", default-features = false }
blake2b_simd = "1"

# web server
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
# WS client for the FROST relay (used in Phase 2.2 onward)
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# zidecar gRPC client (deposit watching)
# tonic = "0.12"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / env
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
