[package]
name = "poker-pvm"
version = "0.1.0"
edition = "2021"
description = "deterministic poker game engine for PolkaVM (provable via WIM)"

[lib]
name = "poker_pvm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "poker-guest"
path = "src/guest.rs"

[[bin]]
name = "cfr-train"
path = "src/cfr/train.rs"
required-features = ["std"]

[[bin]]
name = "cfr-bench"
path = "src/cfr/bench.rs"
required-features = ["std"]

[[bin]]
name = "cfr-selfplay"
path = "src/cfr/selfplay_bin.rs"
required-features = ["std"]

[[bin]]
name = "cfr-bot"
path = "src/cfr/bot_client.rs"
required-features = ["bot"]

[[bin]]
name = "cfr-evolve"
path = "src/cfr/evolve_bin.rs"
required-features = ["std"]

[[bin]]
name = "cfr-analyze"
path = "src/cfr/analyze_bin.rs"
required-features = ["std"]

[features]
default = ["std"]
std = []
# for PolkaVM guest (no_std, no_main)
pvm = []
# for WASM browser (std, wasm-bindgen)
wasm = ["std", "dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
# GPU-accelerated hand evaluation via ROCm HIP
gpu = ["std"]
# parallel CFR training (for multi-core servers)
parallel = ["std", "dep:rayon", "dep:dashmap", "dep:parking_lot"]
# ONNX inference for CTM-MoE bot
onnx = ["std", "dep:ort", "dep:ndarray"]
# standalone bot client (WebSocket + JSON)
bot = ["std", "dep:tungstenite", "dep:serde_json", "dep:serde", "dep:rand"]

[dependencies]
# optional: WASM bindings
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
# parallel CFR training
rayon = { version = "1.10", optional = true }
dashmap = { version = "6", optional = true }
parking_lot = { version = "0.12", optional = true }
# ONNX runtime for CTM-MoE inference
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }
# WebSocket client for standalone bot
tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
serde_json = { version = "1", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.8"
