[package]
name = "poker-sdk"
version = "0.1.0"
edition = "2021"
description = "client SDK for ghettobox mental poker - proof generation, encryption, chain integration"
authors = ["Rotko Networks"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotkonetworks/zeratul"

[features]
default = ["std"]
std = [
    "blake3/std",
    "chacha20poly1305/std",
]
ligerito-proofs = ["dep:ligerito"]
wasm = [
    "std",
    "getrandom/js",
]
# optional: decaf377 for BLS12-377 SNARK compatibility
decaf377 = ["dep:decaf377", "dep:decaf377-ka"]

[dependencies]
# crypto - x25519 default, decaf377 optional
blake3 = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"

# optional: decaf377 curve (for BLS12-377 SNARKs)
decaf377 = { version = "0.10", optional = true }
decaf377-ka = { version = "2.1", optional = true }

# proof generation
ligerito = { path = "../../../zcli/crates/ligerito", default-features = false, optional = true }

# frostito: nested FROST + OSST for escrow
osst = { path = "../osst", features = ["pallas"] }
pasta_curves = { version = "0.5", default-features = false, features = ["alloc"] }

# mental poker: zk shuffle proofs (ristretto255)
zk-shuffle = { path = "../zk-shuffle", default-features = false, features = ["std"] }
curve25519-dalek = { version = "4.1", default-features = false, features = ["digest", "rand_core", "group"] }

# encoding
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }

# errors
thiserror = "1"

# wasm support
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
hex = "0.4"
